<resources>
    <string name="app_name">HeathApp</string>
    <string name="tv_title">BMI Calculator</string>
    <string name="tv_male">male</string>
    <string name="tv_female">Female</string>
    <string name="tv_height">Height</string>
    <string name="tv_weight">Weight</string>
    <string name="tv_age">age</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="btn_calculate">Calculate</string>
    <string name="tv_result">Your Results</string>
    <string name="btn_recalculate">Re-Calculate</string>
</resources>