<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_main"
    tools:context=".MainActivity">

    <TextView
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="true"
        android:text="@string/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:weightSum="8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/tv_male"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <CheckBox
                android:id="@+id/checkbox_male"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="4"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textAllCaps="true"
                android:text="@string/tv_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <CheckBox
                android:id="@+id/checkbox_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:text="@string/tv_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_height"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:text="160"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:text="cm"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <SeekBar
            android:padding="10dp"
            tools:progress="160"
            android:max="250"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_margin="20dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/tv_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_weight="1"
                    android:gravity="end"
                    android:id="@+id/tv_weight"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="32sp"
                    android:text="48"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:text="Kg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_weight="1"
                    android:id="@+id/btn_sub_weight"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/sub"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_bg_button"
                    android:layout_width="55dp"
                    android:layout_height="75dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:id="@+id/btn_add_weight"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/add"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_bg_button"
                    android:layout_width="55dp"
                    android:layout_height="75dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginLeft="10dp"
            app:cardCornerRadius="5dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/tv_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:id="@+id/tv_age"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="32sp"
                    android:text="21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sub_age"
                    android:layout_width="55dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_bg_button"
                    android:text="@string/sub"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_age"
                    android:layout_width="55dp"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="75dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_bg_button"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="30dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btn_calculate" />
    </RelativeLayout>
</LinearLayout>