<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ResultActivity"
    android:background="@color/bg_main">

    <Toolbar
        android:padding="10dp"
        android:background="@color/bg_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:text="@string/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </Toolbar>
    <TextView
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:text="@string/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="32sp"
                android:textColor="@color/red"
                tools:text="underweight"
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textStyle="bold"
                android:textSize="40sp"
                tools:text="16.6"
                android:id="@+id/tv_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:padding="10dp"
                android:layout_marginTop="100dp"
                android:gravity="center"
                tools:text="You have a lower than normal body weight."
                android:textSize="32sp"
                android:textColor="@color/black"
                android:id="@+id/tv_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_alignParentBottom="true"
            android:textSize="24sp"
            android:padding="10dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/btn_recalculate"
            android:id="@+id/btn_recalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>